# semantic-search

./: .env.example  .gitignore  README.md  agents_messaging.db  check_collection_dims.py  fastmcp.json  investigacion.txt  mejoras.md  pyproject.toml  requirements.txt  start.sh  test_explore_text_direct.py  test_explore_workspace.py  test_real_20.py  test_search.py  test_structured_output.py
.codebase/: cache.json  state.json
adhoctests/: comparison_rerank_vs_no_rerank.py  test_all_tools.py  test_explore_demo.py  test_search_python.py  test_server_local_rerank.py  test_smart_merge.py
src/: __init__.py  chunk_merger.py  config.py  embedder.py  judge.py  qdrant_store.py  server.py  server.py.backup  server_local.py  server_qdrant.py  server_sqlite.py  storage_resolver.py  text_judge.py  voyage_reranker.py
