[project]
name = "mcp-codebase-search"
version = "0.1.0"
description = "MCP Codebase Search Server with FastMCP"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.5.0",
    "qdrant-client>=1.11.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0"
]

